# mcp-rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
mcp_rag.egg-info/: PKG-INFO  SOURCES.txt
src/: config.py  rag.py  server.py
